--- a/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayrequestinfor.xhtml
@@ -47,6 +47,8 @@
                             </c:if>
                             <c:if test="#{dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
                                 <p:menuitem value="Reject Order" url="returnorder.xhtml" />
+                                <p:menuitem value="Generate Invoice" url="orderswaitingforinvoice.xhtml" />
+
                             </c:if>
                         </p:submenu>
                     </c:if>
@@ -72,10 +74,14 @@
 
                 <p:fieldset legend="Customer Information" style="margin-bottom:20px">
                     <h:panelGrid columns="2" cellpadding="5">
-                        <h:outputText value="Campany Name:"/>
-                        <h:outputText value="#{quotationManagedBean.selectedRequest.customerId}"/>
-                        <h:outputText value="Campany Name:"/>
-                        <h:outputText value="#{quotationManagedBean.selectedRequest.customerId}"/>
+                        <h:outputText value="Customer Id:"/>
+                        <h:outputText value="#{quotationManagedBean.selectedQuotation.customerId}"/>
+                        <h:outputText value="Contact Person First Name:"/>
+                        <h:outputText value="#{quotationManagedBean.mycustomer.firstName}"/>
+                        <h:outputText value="Contact Person First Name:"/>
+                        <h:outputText value="#{quotationManagedBean.mycustomer.lastName}"/>
+                        <h:outputText value="Contact Number"/>
+                        <h:outputText value="#{quotationManagedBean.mycustomer.contactNumber}"/>
                         <br></br>
                         <h:outputText
                             value="The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
