--- a/MerlionPortal/MerlionPortal-war/web/oes/recordpayment.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/recordpayment.xhtml
@@ -23,7 +23,7 @@
         <ui:define name="left">
 
             <h:form id="formMain">
-                                <p:panelMenu>
+                <p:panelMenu>
                     <p:submenu label="Home" styleClass="display:block">
                         <p:menuitem value="OES Home" url="oesindexpage.xhtml" />
                     </p:submenu>
@@ -47,6 +47,8 @@
                             </c:if>
                             <c:if test="#{dashboardBean.checkOESCanGenerateSO() ||dashboardBean.loginedUser.userType == 'superuser'}">
                                 <p:menuitem value="Reject Order" url="returnorder.xhtml" />
+                                <p:menuitem value="Generate Invoice" url="orderswaitingforinvoice.xhtml" />
+
                             </c:if>
                         </p:submenu>
                     </c:if>
