im done DO NOT CHANGE

--- a/MerlionPortal/MerlionPortal-war/web/oes/viewquotationinfor.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/viewquotationinfor.xhtml
@@ -76,11 +76,11 @@
                         <h:outputText value="Customer Id:"/>
                         <h:outputText value="#{quotationManagedBean.selectedQuotation.customerId}"/>
                         <h:outputText value="Contact Person First Name:"/>
-                        <h:outputText value="#{quotationManagedBean.mycustomer.firstName}"/>
+                        <h:outputText value="#{quotationManagedBean.cutomer.firstName}"/>
                         <h:outputText value="Contact Person First Name:"/>
-                        <h:outputText value="#{quotationManagedBean.mycustomer.lastName}"/>
+                        <h:outputText value="#{quotationManagedBean.cutomer.lastName}"/>
                         <h:outputText value="Contact Number"/>
-                        <h:outputText value="#{quotationManagedBean.mycustomer.contactNumber}"/>
+                        <h:outputText value="#{quotationManagedBean.cutomer.contactNumber}"/>
 
                         <br></br>
                         <h:outputText
