im done DO NOT CHANGE

--- a/MerlionPortal/MerlionPortal-war/web/oes/createso.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/createso.xhtml
@@ -135,8 +135,8 @@
                             <f:selectItem itemLabel="03 Wrong price" itemValue="03 Wrong price" />
                             <f:selectItem itemLabel="04 Wrong ship to address" itemValue="04 Wrong ship to address" />
                             <f:selectItem itemLabel="05 Wrong contact person" itemValue="05 Wrong contact person" />
-                            <f:selectItem itemLabel="06 Credit check fail" itemValue="" />
-                            <f:selectItem itemLabel="07 Others please contact sales for more information" itemValue="" />
+                            <f:selectItem itemLabel="06 Credit check fail" itemValue="06 Credit check fail" />
+                            <f:selectItem itemLabel="07 Others please contact sales for more information" itemValue="07 Others please contact sales for more information" />
                             <f:selectItem itemLabel="08 Unable to fulfill this order" itemValue="08 Unable to fulfill this order" />
                         </h:selectOneMenu>
                     </h:panelGrid>
