Bug fix - Xiameng

--- a/MerlionPortal/MerlionPortal-war/web/oes/createso.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/createso.xhtml
@@ -115,7 +115,7 @@
                 <br></br>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                 <br></br>
-                <p:commandButton action="viewallpo" value="Cancel">
+                <p:commandButton action="viewallpo.xhtml?faces-redirect=true" value="Go Back">
                 </p:commandButton> 
                 <p:commandButton action="#{salesOrderManagedBean.checkCredit()}" value=" Check customer credit">
                 </p:commandButton> 
