--- a/MerlionPortal/MerlionPortal-war/web/oes/recordpayment.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/recordpayment.xhtml
@@ -82,6 +82,7 @@
                         </h:selectOneMenu>
                     </h:panelGrid>
                     <p:separator />
+                    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
                     <p:commandButton value="Make Payment" actionListener="#{recordPayamentManagedBean.makePayment()}" icon="ui-icon-check" />
                 </p:panel>
                 <p:fieldset legend="Ship To " style="margin-bottom:20px">
