--- a/MerlionPortal/MerlionPortal-war/web/oes/displayinvoicedetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/displayinvoicedetail.xhtml
@@ -12,7 +12,7 @@
         <c:set var="import" value="templateadmin.xhtml"/>
     </c:if>
     <ui:composition template="${root}/templates/${import}">        
-        <ui:param name="pageName" value="Create SO" />
+        <ui:param name="pageName" value="Display Quotations" />
 
         <ui:define name="more-imports">
             <ui:insert>
@@ -65,53 +65,59 @@
                         </p:submenu>
                     </c:if>
                 </p:panelMenu>
+            </h:form>
         </ui:define>
-        <br></br>
-        <p:fieldset legend="Invoice" style="margin-bottom:20px">
-            <h:panelGrid id="inVodetail" columns="2" cellpadding="5">
-                <p>Invoice #: </p><h:outputText value="#{displayInvoiceManagedBean.myInvoice.invoiceId}"/>
-                <p>Total Price</p><h:outputText value="#{displayInvoiceManagedBean.myInvoice.totalPrice}"/>
-                <p>Terms and Condition</p><h:outputText value="#{displayInvoiceManagedBean.myInvoice.condition}"/>
-            </h:panelGrid>
-        </p:fieldset>
-        <br></br>
-        <p:fieldset legend="Ship To " style="margin-bottom:20px">
-            <h:panelGrid id="detail" columns="2" cellpadding="5">
-                <p>Contact Person: </p><h:outputText value="#{displayInvoiceManagedBean.myOrder.contactPersonName}"/>
-                <p>Phone Number: </p><h:outputText value="#{displayInvoiceManagedBean.myOrder.contactPersonPhoneNumber}"/>
-                <p>Address : </p><h:outputText value="#{displayInvoiceManagedBean.myOrder.shipTo}"/>
-                <p>Quotation : </p><h:outputText value="#{displayInvoiceManagedBean.myOrder.quotationId}"/>
 
-            </h:panelGrid>
-        </p:fieldset>
-        <br></br>
-        <br></br>
-        <p:dataTable var="lineItem" value="#{displayInvoiceManagedBean.myOrder.productOrderLineItemList}">
-            <p:column headerText="Product">
-                <h:outputText value="#{lineItem.productproductId.productName}" />
-            </p:column>
+        <ui:define name="right">
+            <h:form>
+            <br></br>
+            <p:fieldset legend="Invoice" style="margin-bottom:20px">
+                <h:panelGrid id="inVodetail" columns="2" cellpadding="5">
+                    <p>Invoice #: </p><h:outputText value="#{displayInvoiceManagedBean.myInvoice.invoiceId}"/>
+                    <p>Total Price</p><h:outputText value="#{displayInvoiceManagedBean.myInvoice.totalPrice}"/>
+                    <p>Terms and Condition</p><h:outputText value="#{displayInvoiceManagedBean.myInvoice.conditionText}"/>
+                </h:panelGrid>
+            </p:fieldset>
+            <br></br>
+            <p:fieldset legend="Ship To " style="margin-bottom:20px">
+                <h:panelGrid id="detail" columns="2" cellpadding="5">
+                    <p>Contact Person: </p><h:outputText value="#{displayInvoiceManagedBean.myOrder.contactPersonName}"/>
+                    <p>Phone Number: </p><h:outputText value="#{displayInvoiceManagedBean.myOrder.contactPersonPhoneNumber}"/>
+                    <p>Address : </p><h:outputText value="#{displayInvoiceManagedBean.myOrder.shipTo}"/>
+                    <p>Quotation : </p><h:outputText value="#{displayInvoiceManagedBean.myOrder.quotationId}"/>
 
-            <p:column headerText="Description">
-                <h:outputText value="#{lineItem.productproductId.description}" />
-            </p:column>
+                </h:panelGrid>
+            </p:fieldset>
+            <br></br>
+            <br></br>
+            <p:dataTable var="lineItem" value="#{displayInvoiceManagedBean.myOrder.productOrderLineItemList}">
+                <p:column headerText="Product">
+                    <h:outputText value="#{lineItem.productproductId.productName}" />
+                </p:column>
 
-            <p:column headerText="Category">
-                <h:outputText value="#{lineItem.productproductId.category}" />
-            </p:column>
-            <p:column headerText="Unit Price">
-                <h:outputText value="#{lineItem.price}" />
-            </p:column>
-            <p:column headerText="Quantity">
-                <h:outputText value="#{lineItem.quantity}" />
-            </p:column>
-            <p:column headerText="Value">
-                <h:outputText value="#{lineItem.quantity*lineItem.price}" />
-            </p:column>
-        </p:dataTable>
-        <br></br>
-        <br></br>
-        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-        <p:commandButton value="Go Back" actionListener="allinvoice.xhtml" icon="ui-icon-check" />
-        </h:form>
+                <p:column headerText="Description">
+                    <h:outputText value="#{lineItem.productproductId.description}" />
+                </p:column>
+
+                <p:column headerText="Category">
+                    <h:outputText value="#{lineItem.productproductId.category}" />
+                </p:column>
+                <p:column headerText="Unit Price">
+                    <h:outputText value="#{lineItem.price}" />
+                </p:column>
+                <p:column headerText="Quantity">
+                    <h:outputText value="#{lineItem.quantity}" />
+                </p:column>
+                <p:column headerText="Value">
+                    <h:outputText value="#{lineItem.quantity*lineItem.price}" />
+                </p:column>
+            </p:dataTable>
+            <br></br>
+            <br></br>
+            <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+            <p:commandButton value="Go Back" action="allinvoice.xhtml?faces-redirct=true" icon="ui-icon-check" />
+            </h:form>
+        </ui:define>
+    </ui:composition>
 </html>
 
