--- a/MerlionPortal/MerlionPortal-war/web/oes/invoice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/invoice.xhtml
@@ -120,7 +120,7 @@
                 <h:outputText id="display" />
                 <br></br>
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                <p:commandButton value="Cancel" actionListener="orderswaitingforinvoice.xhtml" icon="ui-icon-check" />
+                <p:commandButton value="Go Back" action="orderswaitingforinvoice.xhtml?faces-redirect=true" icon="ui-icon-check" />
                 <p:commandButton value="Generate Invoice" actionListener="#{generateInvoiceManagedBean.generateInvoice()}" icon="ui-icon-check" />
             </h:form>
 
