--- a/MerlionPortal/MerlionPortal-war/web/oes/createso.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/createso.xhtml
@@ -127,8 +127,8 @@
             <h:form>
                 <p:panel header="Reject Purchase Order" style="margin-bottom:10px;">
                     <h:panelGrid columns="2" cellpadding="5">
-                        <p:outputLabel value="Reject Reson " />                       
-                        <h:selectOneMenu id="reason" value="#{salesOrderManagedBean.reason}" style="width:150px">
+                        <p:outputLabel value="Reject Reason" />                       
+                        <p:selectOneMenu id="reason" value="#{salesOrderManagedBean.rejectReason}" style="width:150px">
                             <f:selectItem itemLabel="Select Reject Reson" itemValue="" noSelectionOption="true" />
                             <f:selectItem itemLabel="01 Wrong product" itemValue="01 Wrong product"  />
                             <f:selectItem itemLabel="02 Wrong product quantity" itemValue="02 Wrong product quantity" />
@@ -138,10 +138,10 @@
                             <f:selectItem itemLabel="06 Credit check fail" itemValue="06 Credit check fail" />
                             <f:selectItem itemLabel="07 Others please contact sales for more information" itemValue="07 Others please contact sales for more information" />
                             <f:selectItem itemLabel="08 Unable to fulfill this order" itemValue="08 Unable to fulfill this order" />
-                        </h:selectOneMenu>
+                        </p:selectOneMenu>
                     </h:panelGrid>
                     <p:separator />
-                    <p:commandButton value="Reject this Order" actionListener="#{salesOrderManagedBean.rejectPo()}" icon="ui-icon-check" />
+                    <p:commandButton value="Reject this Order" action="#{salesOrderManagedBean.rejectPo()}" icon="ui-icon-check" />
                 </p:panel>
             </h:form>
         </ui:define>
