--- a/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/addnewproduct.xhtml
@@ -53,7 +53,7 @@
         <ui:define name="right">
 
             <h:form id="formMain">
-                <p:growl id="growl" showDetail="true" sticky="true" /> 
+                <p:growl id="growl" sticky="true" /> 
                 <p:panel id="panel" header="Add New Product">
                     <p:ajaxStatus style="width:16px;height:16px;">
                         <f:facet name="start">
@@ -129,27 +129,27 @@
                                 <h:selectOneMenu id="currency" value="#{productManagedBean.currency}" required="true" label="Currency">
                                     <f:selectItem itemLabel="Select Currency" itemValue="" noSelectionOption="true" />
 
-                                    <f:selectItem itemLabel="US Dollar (USD)" itemValue="USD" />
-                                    <f:selectItem itemLabel="European Euro (EUR)" itemValue="EUR" />
-                                    <f:selectItem itemLabel="Japan Yen (JPY)" itemValue="JPY" />
-                                    <f:selectItem itemLabel="Pound Sterling (GBP)" itemValue="GBP" />
-                                    <f:selectItem itemLabel="Australian Dollar (AUD)" itemValue="AUD" />
-                                    <f:selectItem itemLabel="Swiss Franc (CHF)" itemValue="CHF" />
-                                    <f:selectItem itemLabel="Canadian Dollar (CAD)" itemValue="CAD" />
-                                    <f:selectItem itemLabel="Hong Kong Dollar (HKD)" itemValue="HKD" />
-                                    <f:selectItem itemLabel="Swedish Krona (SEK)" itemValue="SEK" />
-                                    <f:selectItem itemLabel="New Zealand Dollar (NZD)" itemValue="NZD" />
+                                    <f:selectItem itemLabel="US Dollar (USD)" itemValue="US Dollar (USD)" />
+                                    <f:selectItem itemLabel="European Euro (EUR)" itemValue="European Euro (EUR)" />
+                                    <f:selectItem itemLabel="Japan Yen (JPY)" itemValue="Japan Yen (JPY)" />
+                                    <f:selectItem itemLabel="Pound Sterling (GBP)" itemValue="Pound Sterling (GBP)" />
+                                    <f:selectItem itemLabel="Australian Dollar (AUD)" itemValue="Australian Dollar (AUD)" />
+                                    <f:selectItem itemLabel="Swiss Franc (CHF)" itemValue="Swiss Franc (CHF)" />
+                                    <f:selectItem itemLabel="Canadian Dollar (CAD)" itemValue="Canadian Dollar (CAD)" />
+                                    <f:selectItem itemLabel="Hong Kong Dollar (HKD)" itemValue="Hong Kong Dollar (HKD)" />
+                                    <f:selectItem itemLabel="Swedish Krona (SEK)" itemValue="Swedish Krona (SEK)" />
+                                    <f:selectItem itemLabel="New Zealand Dollar (NZD)" itemValue="New Zealand Dollar (NZD)" />
 
-                                    <f:selectItem itemLabel="South African Rand (ZAR)" itemValue="ZAR" />
-                                    <f:selectItem itemLabel="Russian Ruble (RUB)" itemValue="RUB" />
-                                    <f:selectItem itemLabel="Indian Rupee (INR)" itemValue="INR" />
-                                    <f:selectItem itemLabel="Singapore Dollar (SGD)" itemValue="SGD" />
-                                    <f:selectItem itemLabel="Bulgarian Lev (BGN)" itemValue="BGN" />
-                                    <f:selectItem itemLabel="Chinese Yuan Renminbi (CNY)" itemValue="CNT" />
-                                    <f:selectItem itemLabel="Thailand Baht (THB)" itemValue="THB" />
-                                    <f:selectItem itemLabel="Hungary Forint(HUF)" itemValue="HUF" />   
-                                    <f:selectItem itemLabel="Norwegian Krone (NOK)" itemValue="NOK" />
-                                    <f:selectItem itemLabel="Mexican Peso (MXN)" itemValue="MXN" />
+                                    <f:selectItem itemLabel="South African Rand (ZAR)" itemValue="South African Rand (ZAR)" />
+                                    <f:selectItem itemLabel="Russian Ruble (RUB)" itemValue="Russian Ruble (RUB)" />
+                                    <f:selectItem itemLabel="Indian Rupee (INR)" itemValue="Indian Rupee (INR)" />
+                                    <f:selectItem itemLabel="Singapore Dollar (SGD)" itemValue="Singapore Dollar (SGD)" />
+                                    <f:selectItem itemLabel="Bulgarian Lev (BGN)" itemValue="Bulgarian Lev (BGN)" />
+                                    <f:selectItem itemLabel="Chinese Yuan Renminbi (CNY)" itemValue="Chinese Yuan Renminbi (CNY)" />
+                                    <f:selectItem itemLabel="Thailand Baht (THB)" itemValue="Thailand Baht (THB)" />
+                                    <f:selectItem itemLabel="Hungary Forint(HUF)" itemValue="Hungary Forint(HUF)" />   
+                                    <f:selectItem itemLabel="Norwegian Krone (NOK)" itemValue="Norwegian Krone (NOK)" />
+                                    <f:selectItem itemLabel="Mexican Peso (MXN)" itemValue="Mexican Peso (MXN)" />
                                 </h:selectOneMenu>
                             </p:column>
                         </p:row>  
