--- a/MerlionPortal/MerlionPortal-war/web/oes/returnorder.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/returnorder.xhtml
@@ -136,7 +136,7 @@
                     <p:separator />
                     <p:commandButton value="Reject this Order" actionListener="#{productReturnManagedBean.rejectWhole()}" icon="ui-icon-check" />
                 </p:panel>
-                <p:commandButton value="Cancel" actionListener="oesindexpage.xhtml" icon="ui-icon-check" />
+                <p:commandButton value="Go Back" action="oesindexpage.xhtml?faces-redirect=ture" icon="ui-icon-check" />
             </h:form>
         </ui:define>
     </ui:composition>
